--- a/ui/admin.ui
+++ b/ui/admin.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1536</width>
-    <height>960</height>
+    <height>830</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -858,6 +858,9 @@ QPushButton:checked{
               <layout class="QHBoxLayout" name="horizontalLayout_10">
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_9">
+                 <property name="spacing">
+                  <number>20</number>
+                 </property>
                  <item>
                   <widget class="QPushButton" name="add_product_pushButton">
                    <property name="minimumSize">
@@ -1067,41 +1070,38 @@ QPushButton:checked{
                   </widget>
                  </item>
                  <item>
-                  <widget class="QPushButton" name="clear_pushButton">
+                  <widget class="QPushButton" name="reload_pushButton">
                    <property name="minimumSize">
                     <size>
-                     <width>100</width>
+                     <width>0</width>
                      <height>0</height>
                     </size>
                    </property>
                    <property name="styleSheet">
                     <string notr="true">QPushButton{
-	border: 1px solid gray;
-	border-radius: 5px;
-	background-color: black;
-	color: white;
-	font-size: 14px;
-	font-weight: bold;
-	height: 35px;
+	border: none;
 }
 
-QPushButton:hover{
-	color: rgb(0, 144, 251);
-}
-
-QPushButton:checked{
-	background-color: rgb(0, 144, 251);
-	color: ligthgray;
-}</string>
+</string>
                    </property>
                    <property name="text">
-                    <string>Clear</string>
+                    <string/>
+                   </property>
+                   <property name="icon">
+                    <iconset>
+                     <normaloff>../assets/icon/refresh.png</normaloff>../assets/icon/refresh.png</iconset>
+                   </property>
+                   <property name="iconSize">
+                    <size>
+                     <width>35</width>
+                     <height>35</height>
+                    </size>
                    </property>
                    <property name="checkable">
                     <bool>true</bool>
                    </property>
                    <property name="autoExclusive">
-                    <bool>true</bool>
+                    <bool>false</bool>
                    </property>
                   </widget>
                  </item>
